--- a/app/public/css/myprofit.css
+++ b/app/public/css/myprofit.css
@@ -55,6 +55,9 @@
     justify-content: center;
     color: #999;
 }
+.myProfitPage .ui.secondary.pointing.menu >div{
+    flex-grow: 1
+}
 .myProfitPage .ui.secondary.pointing.menu .item.active{
     border-color: #5694dd;
     color:#5694dd;
@@ -68,8 +71,20 @@
     justify-content: space-between;
     padding: 10px 15px;
 }
+.myProfitPage .cont .tt.hide{
+    display: none
+}
 .myProfitPage .cont .tt span{
     font-size: 14px;
+}
+.myProfitPage .cont .t2{
+    text-align: center;
+    line-height: 50px;
+    color: #999;
+    font-size: 16px;
+}
+.myProfitPage .cont .t2.hide{
+    display: none
 }
 .myProfitPage .cont .ll .l{
     background: #FFF;
