从购物车提交订单

--- a/app/public/css/shoppingcart.css
+++ b/app/public/css/shoppingcart.css
@@ -107,7 +107,7 @@
     padding: 0;
 }
 
-.shoppingCartPage .footBtn {
+.shoppingCartPage .footBtn >div{
     background: #FFF;
     padding: 0 0 0 15px;
     display: flex;
