--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -10,9 +10,32 @@
     font-size: 14px;
 }
 
+
+.AddressListPage .listcont{
+
+}
+
+.AddressListPage .listcont .addressItem{
+    border-bottom: 1px solid #EEE;
+}
+.AddressListPage .listcont .addressItem .rc-swipeout{
+    padding: 15px;
+}
 .ui.list.addAddress {
     border: none;
     background: #FFF
+}
+.AddressListPage .addressItem .tit{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #999;
+}
+.AddressListPage .addressItem .address{
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: #111;
 }
 
 .addAddress.ui.selection.list .list > .item, .addAddress.ui.selection.list > .item {
@@ -23,6 +46,31 @@
     border-radius: 0;
     min-height: 50px;
     align-items: stretch;
+}
+
+.AddressListPage .ui.checkbox .box:before,
+.AddressListPage .ui.checkbox label:before{
+    border-radius: 50px;
+    width: 20px;
+    height: 20px;
+}
+.AddressListPage .ui.checkbox .box:after,
+.AddressListPage .ui.checkbox label:after{
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    background: #5596d6;
+    border-radius: 40px;
+    color: #FFF;
+    font-weight: 100;
+}
+.AddressListPage .ui.checkbox input:checked~.box:after,
+.AddressListPage .ui.checkbox input:checked~label:after{
+    color: #FFF;
+}
+.AddressListPage .ui.checkbox input.hidden+label{
+    height: 20px;
+    line-height: 20px;
 }
 
 .addAddress.ui.selection.list .list > .item, .addAddress.ui.selection.list > .item .tit {
