提交订单功能，还剩积分和余额扣除

--- a/app/public/css/pay.css
+++ b/app/public/css/pay.css
@@ -134,6 +134,7 @@
     align-items: center;
     height: 44px;
     padding: 0 0 0 15px;
+    border-top: 1px solid #EEE;
 }
 .PayPage .subBtn .ui.button{
     background: none;
