--- a/app/public/css/mycoupon.css
+++ b/app/public/css/mycoupon.css
@@ -71,3 +71,22 @@
     font-size: 16px;
     margin-bottom: 8px;
 }
+.myCouponList .item.noitem{
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: gray;
+}
+.myCouponPage .selcouponBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    margin: 10px 15px;
+    flex-shrink: 0;
+    background: #5694dd;
+    color: #FFF;
+    font-size: 14px;
+}
