我的推广码，分享样式

--- a/app/public/css/feed.css
+++ b/app/public/css/feed.css
@@ -2,9 +2,11 @@
     width: 100%;
     background: #EEE;
 }
+.feedPage #ListInside >div{
+    margin-bottom: 15px;
+}
 .commentlistcontent{
     background: #FFF;
-    margin-bottom: 15px;
 }
 .commentlistcontent.hide{
     display: none;
