修改展示大图的图片布局中样式问题

--- a/app/public/css/bigimg.css
+++ b/app/public/css/bigimg.css
@@ -23,8 +23,11 @@
     justify-content: center;
 }
 .showBigImg.hide{
-    display: none
+    display: none;
 }
 .showBigImg .swiper-container{
     width: 100%;
+}
+.showBigImg .swiper-container .swiper-wrapper{
+    position: absolute;
 }
