关于我们、用户反馈

--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -54,6 +54,8 @@
     border-radius: 10px;
     color: #FFF;
     padding: 0 3px;
+    min-width: 18px;
+    text-align: center;
 }
 .myProfileBannerCont .l1con{
     background: #FFF;
