套餐一体机列表，新的头部组件newnav.js

--- a/app/public/css/shopping.css
+++ b/app/public/css/shopping.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     padding: 15px;
+    flex-shrink: 0;
 }
 .shoppingPage .shoppingBody{
     flex-grow: 1;
