--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -92,7 +92,7 @@
 }
 
 .ProlistPage .hotLnk span {
-    margin: 10px 0;
+    margin: 10px;
     margin-right: 0;
     font-size: 14px;
     flex-shrink: 0;
