--- a/app/public/css/newnav.css
+++ b/app/public/css/newnav.css
@@ -55,3 +55,33 @@
     height: 48px;
     width: 50px;
 }
+#newNavHeadContent .nli {
+    height: 48px;
+    min-width: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+#newNavHeadContent .nli .iconBtn{
+
+}
+#newNavHeadContent .nli .number{
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: #C00;
+    height: 20px;
+    min-width: 20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 20px;
+    color: #FFF;
+}
+
+
+
+
+
+
+
