--- a/app/public/css/seladdress.css
+++ b/app/public/css/seladdress.css
@@ -1,7 +1,9 @@
 .seladdressPage{
     background: #EEE;
     overflow-y: hidden;
-    justify-content: flex-start
+    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
 }
 .seladdressPage .listcont{
     display: flex;
@@ -9,6 +11,7 @@
     align-self: stretch;
     flex-grow: 1;
     overflow-y: scroll;
+    position: relative;
 }
 .seladdressPage .listcont .li{
     background: #FFF;
@@ -23,4 +26,17 @@
 }
 .seladdressPage .listcont .address{
     color: #111;
+}
+.addAddressLnk{
+    height: 50px;
+    color: #FFF;
+    font-size: 18px;
+    text-align: center;
+    line-height: 50px;
+    background: #5596d6;
+    flex-shrink: 0;
+    align-self: stretch;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
