--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -277,7 +277,7 @@
 .UserLoginPage .logininput .input input {
     border-radius: 0;
     background: #EEE;
-    margin-bottom: 10px;
+    margin-bottom: 18px;
     text-indent: 25px;
     height: 44px;
     font-size: 14px;
@@ -286,7 +286,7 @@
 .loginBotton {
     display: flex;
     flex-direction: column;
-    padding: 20px 14% 20px 14%;
+    padding: 20px 14% 10px 14%;
 }
 
 .loginBotton .ui.button {
@@ -296,7 +296,7 @@
 
 
 .AddressAddPageBottom{
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
@@ -337,7 +337,7 @@
 
 .UserLoginPage .loginPageBottom .tit {
     position: relative;
-    line-height: 40px;
+    line-height: 20px;
     display: flex;
     justify-content: center;
     margin: 0 10%;
@@ -356,7 +356,7 @@
     z-index: 0;
     position: absolute;
     left: 0;
-    top: 20px;
+    top: 10px;
     width: 100%;
     height: 1px;
     background: #EEE;
@@ -384,6 +384,9 @@
 .UserLoginPage .loginPageBottom .lnk > div i.icon {
     margin: 0;
     font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .UserLoginPage .loginPageBottom .lnk > div:last-child {
@@ -427,9 +430,29 @@
 }
 
 
+.UserLoginPage .loginform .logininput {
+    position: relative;
+}
+.UserLoginPage .loginform .logininput .ui.red.pointing.basic.label{
+    border-radius: 0;
+    border: none;
+    position: absolute;
+    bottom: -5px;
+    right: 30px;
+    z-index: 1000;
+    margin:0;
+}
+.UserLoginPage .loginform .logininput .ui.red.pointing.basic.label:before{
+    content: none;
+}
+.UserLoginPage .loginform .logininput  .ui.basic.red.label,
+.UserLoginPage .loginform .logininput  .ui.red.label,
+.UserLoginPage .loginform .logininput  .ui.red.labels .label{
 
-
-
+    background-image: none;
+    background: none;
+    background-color: rgba(0,0,0,0)!important;
+}
 
 
 
