--- a/app/public/css/orderinfo.css
+++ b/app/public/css/orderinfo.css
@@ -25,6 +25,7 @@
     justify-content: space-between;
     padding-left: 15px;
     font-size:14px;
+    flex-grow: 1;
 }
 .orderinfoPage .proinfo .li >div .price {
     display: flex;
