--- a/app/public/css/newnav.css
+++ b/app/public/css/newnav.css
@@ -5,6 +5,7 @@
     height: 48px;
     position: relative;
     flex-shrink: 0;
+    z-index: 1000;
 }
 #newNavHeadContent .title {
     flex-grow: 1;
