--- a/app/public/css/distribution.css
+++ b/app/public/css/distribution.css
@@ -26,6 +26,7 @@
 .distributionPage .userInfo img.avatar {
     border-radius: 50%;
     width: 80px;
+    height: 80px;
     border: 3px solid #FFF;
     margin-bottom: 5px;
 }
