--- a/app/src/components/controls/infinitecontrol.css
+++ b/app/src/components/controls/infinitecontrol.css
@@ -110,6 +110,13 @@
     background: #FFFFFF;
     padding: 10px 15px;
 }
+#ListOutsite{
+    max-height: 100%;
+}
+#ScrollContainer{
+    height: 100%;
+    position:relative;
+}
 
 @-webkit-keyframes weuiLoading {
   0% {
