--- a/app/public/css/shoppingproevaluate.css
+++ b/app/public/css/shoppingproevaluate.css
@@ -1,4 +1,4 @@
-.ShoppingproevaluatePage {
+.pageWamp >div.ShoppingproevaluatePage {
     background: #EEE;
     position: fixed;
     left: 0;
@@ -6,6 +6,7 @@
     bottom: 0;
     top: 0;
     overflow: hidden;
+    justify-content: flex-start;
 }
 
 .ShoppingproevaluatePage .proList {
