--- a/app/public/css/shoppingproevaluate.css
+++ b/app/public/css/shoppingproevaluate.css
@@ -36,6 +36,7 @@
 .ShoppingproevaluatePage .proList .li .tt img {
     border-radius: 50%;
     width: 40px;
+    height: 40px;
     margin-right: 15px;
 }
 
