--- a/app/public/css/newdevice.css
+++ b/app/public/css/newdevice.css
@@ -1,5 +1,5 @@
 .addnewdevice .tt{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 .addnewdevice .tt img{
     width: 100%;
@@ -15,6 +15,25 @@
     color: #999;
     display: flex;
     font-size: 20px;
+    flex-direction: column;
+    padding: 15px;
+    padding-top: 0;
+}
+.addnewdevice .fm .device2_text>div{
+    display: flex;
+    flex-grow: 1;
+    align-self: stretch;
+    color: #333;
+    justify-content: space-between;
+    border-bottom: 1px solid #EEE;
+}
+.addnewdevice .fm .device2_text>div:active{
+    background: #EEE;
+}
+.addnewdevice .fm .device2_text>div div{
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 50px;
 }
 .addnewdevice .fm .input{
     margin: 5px 10% 10px 10%;
@@ -46,3 +65,22 @@
     text-align: center;
     font-size: 16px;
 }
+
+.editdevicePage {
+    padding: 20px;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+}
+.editdevicePage .newdeviceinput{
+    margin-bottom: 15px;
+    display: flex;
+}
+.editdevicePage .newdeviceinput .ui.input{
+    flex-grow: 1;
+    height: 40px;
+}
+
+
+
+
