--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    flex-grow: 1;
+    height: 1;
 }
 .messageList{
     display: flex;
