--- a/app/public/css/myorder.css
+++ b/app/public/css/myorder.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 .myOrder .actionItem{
     display: flex;
