--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -1,7 +1,7 @@
 .pageWamp >div.ProlistPage {
     background: #EEE;
     position: fixed;
-    top: 0;
+    top: 20px;
     bottom: 0;
     left: 0;
     right: 0;
