--- a/app/public/css/head.css
+++ b/app/public/css/head.css
@@ -2,7 +2,7 @@
     outline: none;
 }
 .ui.segment.headContent{
-    background: #5694dd;
+    background: #5596d6;
     border-radius: 0;
     border: 0;
     display: flex;
