--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -19,7 +19,6 @@ input, textarea{
     display: flex;
     justify-content: space-between;
     padding: 0;
-    font-weight: 100;
     overflow: hidden;
     flex-shrink: 1;
     align-self: stretch;
@@ -34,6 +33,15 @@ input, textarea{
     bottom: 0;
     right: 0;
     left: 0;
+}
+.pageWamp >div:before{
+    content:"";
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    top:-3px;
+    left: 0;
+    background: #5596d6
 }
 .homeBottom{
     display : flex;
