--- a/app/public/css/page.css
+++ b/app/public/css/page.css
@@ -1,7 +1,7 @@
 .pageWamp{
     position: relative;
     background: #5596d6;
-    padding-top: 20px;
+    height: 50px;
 }
 .messageCo{
     display: flex;
