--- a/app/public/css/shoppingproinfo.css
+++ b/app/public/css/shoppingproinfo.css
@@ -1,6 +1,5 @@
 .ProinfoPage {
     background: #EEE;
-    padding-top: 48px;
     overflow:hidden;
     display: flex;
     flex-direction: column;
@@ -16,9 +15,6 @@
     background: #5596d6;
     display: flex;
     align-items: center;
-    position: fixed;
-    left:0;
-    top:20px;
     height: 48px;
     width: 100%;
     z-index: 1000;
@@ -35,12 +31,9 @@
 .ProinfoPage .ProinfoPageHead .imgcont {
     display: flex;
     width: 50px;
-    position: absolute;
-    height: 100%;
-    right: 0;
-    top: 0;
     justify-content: center;
     align-items: center;
+    align-self: stretch;
 }
 
 .ProinfoPage .ProinfoPageHead .imgcont span{
@@ -73,10 +66,8 @@
     justify-content: center;
     align-items: center;
     padding-left: 10px;
-    position: absolute;
-    height: 100%;
-    top: 0;
-    left: 0;
+    align-self: stretch;
+    height: auto;
 }
 
 .ProinfoPage .proList {
