--- a/app/public/css/user.css
+++ b/app/public/css/user.css
@@ -1,3 +1,7 @@
+.addAddressPage{
+    flex-grow: 1;
+    overflow: hidden;
+}
 .AddressAddPage{
     background: #EEE;
 }
@@ -296,9 +300,7 @@
 
 
 .AddressAddPageBottom{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    margin-top: 20px;
 }
 
 .UserLoginPage .forgetpwd {
