--- a/app/public/css/mycode.css
+++ b/app/public/css/mycode.css
@@ -6,9 +6,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    top: 0;
+    top: 20px;
     width: 100%;
-    height: 100%;
 }
 .mycodePage .content{
     display: flex;
