--- a/app/public/css/setting.css
+++ b/app/public/css/setting.css
@@ -3,7 +3,7 @@
     position: fixed;
     left: 0;
     bottom: 0;
-    top: 0;
+    top: 20px;
     right: 0;
     display: flex;
     flex-direction: column;
