--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -5,6 +5,7 @@
     -moz-user-select:none;
     -ms-user-select:none;
     user-select:none;
+    font-weight: 100;
 }
 input, textarea{
     -webkit-user-select:text;
