添加直接购买的时候选择购买数量

--- a/app/public/css/addcartdilog.css
+++ b/app/public/css/addcartdilog.css
@@ -98,5 +98,12 @@
     color: #FFF;
 }
 
-
+.addcartdilog .addshopbtn{
+    text-align: center;
+    padding: 10px;
+    margin: 10px 20px;
+    background: #ff3d00;
+    font-size: 16px;
+    color: #FFF;
+}
 
