--- a/app/public/css/shoppingprolist.css
+++ b/app/public/css/shoppingprolist.css
@@ -64,7 +64,7 @@
     display: flex;
     flex-direction: column;
     background: #FFF;
-    align-self: flex-start;
+    align-self: stretch;
     margin-bottom: 5px;
 }
 
