--- a/app/public/css/mymessage.css
+++ b/app/public/css/mymessage.css
@@ -91,12 +91,21 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
 }
+.messageDetail .list{
+  overflow: scroll;
+  flex-grow: 1;
+  padding: 0 20px;
+}
+.messageDetail .list .time{
+  text-align: center;
+}
+
 .messageDetail .tt{
     font-size: 16px;
     margin-bottom: 3px;
     margin-top: 20px;
+    text-align: center;
 }
 .messageDetail .time{
     font-size: 12px;
@@ -104,6 +113,8 @@
 }
 .messageDetail .cont{
     padding: 15px;
+    margin-top: 15px;
+    border-top:1px solid #EEE;
     font-size: 16px;
     display: flex;
     flex-grow: 1;
