--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -40,6 +40,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    overflow-y: scroll;
+    padding-top: 20px;
+    background: #5596d6
 }
 .headContent{
     text-align: center;
@@ -100,8 +104,8 @@
     justify-content: space-between;
     align-items: stretch;
     flex-direction: column;
-    flex-shrink: 1;
-    overflow: scroll;
+    flex-shrink: 0;
+    background: #FFF;
 }
 .HomeList .ListTitle{
     flex-shrink: 0;
