--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -30,20 +30,12 @@ input, textarea{
     flex-direction: column;
     background: #FFF;
     position: fixed;
-    top:20px;
+    top:0;
     bottom: 0;
     right: 0;
     left: 0;
 }
-.pageWamp >div:before{
-    content:"";
-    width: 100%;
-    height: 5px;
-    position: absolute;
-    top:-3px;
-    left: 0;
-    background: #5596d6
-}
+
 .homeBottom{
     display : flex;
     justify-content: space-between;
