--- a/app/public/css/mycode.css
+++ b/app/public/css/mycode.css
@@ -6,7 +6,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    top: 20px;
+    top: 0;
     width: 100%;
 }
 .mycodePage .content{
@@ -32,6 +32,7 @@
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    padding-top: 20px;
 }
 .mycodePage .content .tt{
     font-size: 16px;
