--- a/app/public/css/myprofile.css
+++ b/app/public/css/myprofile.css
@@ -12,10 +12,11 @@
     position: relative;
     flex-shrink: 0;
     margin-top: -1px;
+    padding-top: 50px;
 }
 .myProfilePage .headCont .signDom{
     position: absolute;
-    top: 80px;
+    top: 90px;
     right: 15px;
     color: #FFF;
     display: flex;
@@ -42,7 +43,7 @@
     width: 80px;
     height: 80px;
     border:3px solid #FFF;
-    margin-bottom: 5px;
+    margin-bottom: 5px; 
 }
 .myProfilePage .userInfo .username{
     color: #FFF;
@@ -60,7 +61,7 @@
 .myProfilePage .userMessageLnk{
     position: absolute;
     right: 15px;
-    top: 10px;
+    top: 40px;
 }
 .myProfilePage .userMessageLnk img{
     width: 26px;
