--- a/app/public/css/newnav.css
+++ b/app/public/css/newnav.css
@@ -2,10 +2,11 @@
     background: #5596d6;
     display: flex;
     align-items: center;
-    height: 48px;
+    height: 68px;
     position: relative;
     flex-shrink: 0;
     z-index: 1000;
+    padding-top: 20px;
 }
 #newNavHeadContent .title {
     flex-grow: 1;
@@ -22,7 +23,7 @@
     width: 50%;
     z-index: 2;
     left: 0;
-    top:0;
+    top:20px;
 }
 #newNavHeadContent .rightlnk{
     height: 48px;
@@ -30,7 +31,7 @@
     width: 50%;
     z-index: 2;
     right: 0;
-    top: 0;
+    top: 20px;
 }
 #newNavHeadContent .leftlnk,
 #newNavHeadContent .rightlnk{
