--- a/app/public/css/shoppingcart.css
+++ b/app/public/css/shoppingcart.css
@@ -1,7 +1,7 @@
 .shoppingCartPage {
     background: #EEE;
     overflow: hidden;
-    padding-top: 48px;
+    padding-top: 68px;
     display: flex;
     flex-direction: column;
 }
@@ -12,10 +12,11 @@
     align-items: center;
     position: fixed;
     left: 0;
-    top: 20px;
-    height: 48px;
+    top: 0;
+    height: 68px;
     width: 100%;
     z-index: 1000;
+    padding-top: 20px;
 }
 
 .shoppingCartPage .PageHead .title {
@@ -47,11 +48,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 10px;
+    padding-right: 10px;
     position: absolute;
-    height: 100%;
-    top: 0;
+    height: 48px;
+    bottom: 0;
     left: 0;
+    width: 60px;
 }
 
 .shoppingCartPage .proinfo {
